@@ -138,6 +138,8 @@ Version 1.5.2 - CVS
   - Added check_plugin_version() function.
   - If mailbox name starts with slash or contains ../, error message is
     generated. Safety check for insecure default UW IMAP setup (#1557078).
+  - Ignore message copy errors when messages are deleted. Allows to delete
+    messages when quota is exceeded. (#614887) (#646386) (#1446026)
 
 Version 1.5.1 (branched on 2006-02-12)
 --------------------------------------
